--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="7dp"
-                android:background="@drawable/rounded_button_transparent"
+                android:background="@drawable/rounded_button_solid"
                 android:text="Login"
                 android:textAllCaps="false"
                 android:textColor="@color/colorAccent" />
@@ -83,7 +83,7 @@
         </LinearLayout>
 
         <ProgressBar
-            android:id="@+id/progressbar"
+            android:id="@+id/progressbarLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
