--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,13 +12,13 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary" />
 
-   <!--<TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="Choose profile picture"
-        android:textAlignment="center"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" /> -->
+    <!--<TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:gravity="center_horizontal"
+         android:text="Choose profile picture"
+         android:textAlignment="center"
+         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" /> -->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
             android:layout_margin="20dp"
             android:text="Tap on camera to choose profile picture"
             android:textAlignment="center"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -51,7 +51,6 @@
             android:visibility="gone" />
 
 
-
     </RelativeLayout>
 
     <EditText
@@ -61,12 +60,21 @@
         android:layout_gravity="center_horizontal"
         android:hint="Enter display name" />
 
+    <TextView
+        android:id="@+id/emailVerifiedTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="Email is verified"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button" />
+
     <Button
         android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/rounded_button_solid"
         android:paddingLeft="55dp"
         android:paddingRight="55dp"
