--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#33b0ed</color>
     <color name="colorPrimaryDark">#138dc8</color>
     <color name="colorAccent">#dff2fa</color>
+    <color name="colorSilver">#f7f7f7</color>
+    <color name="colorGrey">#828282</color>
 </resources>
