--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#dff2fa</color>
     <color name="colorSilver">#f7f7f7</color>
     <color name="colorGrey">#828282</color>
+    <color name="colorBright">#ffb8c2</color>
 </resources>
