--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -19,14 +19,14 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginBottom="11dp"
+            android:layout_marginEnd="11dp"
+            android:layout_marginRight="11dp"
+            android:clickable="true"
             android:src="@drawable/upload_cloud_icon2"
-            app:fabSize="normal"
             app:backgroundTint="@color/colorAccent"
             app:elevation="6dp"
-            android:clickable="true" />
+            app:fabSize="normal" />
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/actionToolbar"
@@ -48,6 +48,15 @@
             android:layout_alignParentStart="true"
             android:visibility="gone"
             android:layout_below="@+id/actionToolbar" />
-    </RelativeLayout>
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/uploadActBtn"
+            android:layout_below="@+id/actionToolbar"
+            android:layout_toEndOf="@+id/retrieveProgressBar"
+            android:layout_toRightOf="@+id/retrieveProgressBar" />
+
+    </RelativeLayout>
 </LinearLayout>
