--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -6,22 +6,68 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:layout_margin="10dp">
-        <ImageView
-            android:id="@+id/imagePreview"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="@color/colorAccent"
-            android:layout_margin="10dp"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textViewName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imagePreview"
-            android:layout_centerHorizontal="true"
-            android:visibility="gone"
-            android:hint="image name" />
+            <ImageView
+                android:id="@+id/imagePreview"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:background="@color/colorAccent"
+                android:layout_margin="10dp"
+                />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="210dp">
+
+                <TextView
+                    android:id="@+id/textViewName2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/textViewName4"
+                    android:layout_alignStart="@+id/textViewName4"
+                    android:layout_below="@+id/textViewName4"
+                    android:hint="00.00.0000" />
+
+                <TextView
+                    android:id="@+id/textViewName4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/textViewName"
+                    android:layout_alignStart="@+id/textViewName"
+                    android:layout_below="@+id/textViewName"
+                    android:layout_marginTop="5dp"
+                    android:text="Create date:"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Name:"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
+
+                <TextView
+                    android:id="@+id/textViewName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/textView"
+                    android:layout_alignStart="@+id/textView"
+                    android:layout_below="@+id/textView"
+                    android:hint="filename.png" />
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
