--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -12,62 +12,57 @@
 
             <ImageView
                 android:id="@+id/imagePreview"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:background="@color/colorAccent"
                 android:layout_margin="10dp"
                 />
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="210dp">
+                android:layout_height="130dp">
 
                 <TextView
-                    android:id="@+id/textViewName2"
+                    android:id="@+id/creationTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/textViewName4"
-                    android:layout_alignStart="@+id/textViewName4"
-                    android:layout_below="@+id/textViewName4"
+                    android:layout_alignLeft="@+id/extTextView"
+                    android:layout_alignStart="@+id/extTextView"
+                    android:layout_below="@+id/extTextView"
                     android:hint="00.00.0000" />
 
                 <TextView
-                    android:id="@+id/textViewName4"
+                    android:id="@+id/extTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignLeft="@+id/textViewName"
                     android:layout_alignStart="@+id/textViewName"
                     android:layout_below="@+id/textViewName"
-                    android:layout_marginTop="5dp"
-                    android:text="Create date:"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
-
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
-                    android:text="Name:"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
+                    android:hint="image/jpeg"
+                   />
 
                 <TextView
                     android:id="@+id/textViewName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/textView"
-                    android:layout_alignStart="@+id/textView"
-                    android:layout_below="@+id/textView"
+                    android:layout_marginTop="10dp"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:hint="filename.png" />
-            </RelativeLayout>
 
+                <ImageButton
+                    android:id="@+id/optionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/textViewName"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@null"
+                    app:srcCompat="@drawable/icon_add_menu" />
+            </RelativeLayout>
 
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
 </RelativeLayout>
