--- a/app/src/main/res/menu/work_menu.xml
+++ b/app/src/main/res/menu/work_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/colorAccent">
     <item android:id="@+id/menuProfile"
         android:title="Profile" />
 
